--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
   -O miniconda.sh; else wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
   -O miniconda.sh; fi; bash miniconda.sh -b -p $HOME/miniconda; export PATH="$HOME/miniconda/bin:$PATH";
   hash -r; conda config --set always_yes yes --set changeps1 no; conda update -q conda;
-  conda config --add channels conda-forge; conda info -a;
+  conda info -a;
 
   conda create -q -n test-env python=$TRAVIS_PYTHON_VERSION; source activate test-env;
 
