--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ install:
     conda update -q conda;
     conda info -a;
     
-    conda create -n test-env python=$TRAVIS_PYTHON_VERSION --yes;
-    source activate test-env;
+    conda create -n test_env python=$TRAVIS_PYTHON_VERSION --yes;
+    source activate test_env;
 
     python setup.py install;
     python -m pip install -r requirements_dev.txt;
@@ -39,11 +39,13 @@ install:
 script:
 - if [[ "$TEST_ENV" == "conda" ]]; then
     export PATH=$HOME/miniconda/bin:$PATH;
-    source activate test-env;
-    python -m pytest;
-    sphinx-apidoc -o docs xshape;
-    sphinx-build
-  -W -b html -d docs/_build/doctrees docs/. docs/_build/html; else tox; fi;
+    source activate test_env;
+    python -m pytest &&
+    sphinx-apidoc -o docs xshape &&
+    sphinx-build -W -b html -d docs/_build/doctrees docs/. docs/_build/html;
+  else
+    tox;
+  fi;
 
 after_success:
 - coveralls
