add requirements.txt to tox deps

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py27, py34, py35, flake8
+envlist = py27, py35, py36, flake8
 
 [travis]
 python =
     3.5: py35
-    3.4: py34
+    3.6: py36
     2.7: py27
 
 [testenv:flake8]
@@ -16,6 +16,7 @@ commands=flake8 xshape
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
+    -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements_conda.txt
 commands =
