rename prep_polygons --> parse_shapefile; bug fixes and pep8

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py35, py36, flake8
+envlist = py27, py35, py36, flake8, docs
 
 [travis]
 python =
@@ -22,6 +22,19 @@ deps =
 commands =
     pip install -U pip
     pytest --basetemp={envtmpdir}
+
+[testenv:docs]
+setenv =
+    PYTHONPATH = {toxinidir}
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements_conda.txt
+commands =
+    pip install -U pip
+    sphinx-apidoc -o docs xshape
+    sphinx-build -W -b html -d docs/_build/doctrees docs/. docs/_build/html
+
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
