--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements.txt
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements_dev_py2k.txt
     -r{toxinidir}/requirements_conda.txt
 commands =
     pip install -U pip
@@ -28,7 +28,7 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements.txt
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements_dev_py2k.txt
     -r{toxinidir}/requirements_conda.txt
 commands =
     pip install -U pip
@@ -39,5 +39,5 @@ commands =
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
 ; deps =
-;     -r{toxinidir}/requirements_dev.txt
+;     -r{toxinidir}/requirements_dev_py2k.txt
 ;     -r{toxinidir}/requirements_conda.txt
