--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
     -r{toxinidir}/requirements_conda.txt
 commands =
     pip install -U pip
-    pytest --basetemp={envtmpdir}
+    python -m tests.run_tests --basetemp={envtmpdir}
 
 [testenv:docs]
 setenv =
